--- a/Example/AndesUI/Home/Views/HomeViewController.xib
+++ b/Example/AndesUI/Home/Views/HomeViewController.xib
@@ -12,6 +12,7 @@
             <connections>
                 <outlet property="badgesBtn" destination="6KW-tw-Wm7" id="fHM-Jj-4Fy"/>
                 <outlet property="button" destination="pzX-2Z-8ZP" id="mDt-cx-9G3"/>
+                <outlet property="cardBtn" destination="RSJ-jO-HhG" id="sHG-0l-VNm"/>
                 <outlet property="checkboxBtn" destination="nQg-JB-1Sl" id="aJZ-e0-enA"/>
                 <outlet property="contributingButton" destination="U75-6J-iuH" id="zA5-oc-yCo"/>
                 <outlet property="messagesBtn" destination="iA2-9b-o7k" id="hLz-sQ-2WS"/>
@@ -35,7 +36,7 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ylf-cA-m4U">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="758"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="806"/>
                             <subviews>
                                 <view contentMode="scaleToFill" placeholderIntrinsicWidth="382" placeholderIntrinsicHeight="128" translatesAutoresizingMaskIntoConstraints="NO" id="TeE-fb-BDr" customClass="AndesMessage" customModule="AndesUI">
                                     <rect key="frame" x="16" y="16" width="382" height="128"/>
@@ -46,13 +47,13 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="More" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mHc-S7-NqP">
-                                    <rect key="frame" x="16" y="614" width="35.5" height="18"/>
+                                    <rect key="frame" x="16" y="662" width="35.5" height="18"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="40" translatesAutoresizingMaskIntoConstraints="NO" id="wv9-5A-3H3" customClass="AndesButton" customModule="AndesUI">
-                                    <rect key="frame" x="16" y="648" width="382" height="40"/>
+                                    <rect key="frame" x="16" y="696" width="382" height="40"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="string" keyPath="text" value="Andes Specs"/>
@@ -64,7 +65,7 @@
                                     </connections>
                                 </view>
                                 <view contentMode="scaleToFill" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="40" translatesAutoresizingMaskIntoConstraints="NO" id="U75-6J-iuH" userLabel="Contributing Button" customClass="AndesButton" customModule="AndesUI">
-                                    <rect key="frame" x="16" y="698" width="382" height="40"/>
+                                    <rect key="frame" x="16" y="746" width="382" height="40"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="string" keyPath="ibHierarchy" value="quiet"/>
@@ -74,7 +75,7 @@
                                     </connections>
                                 </view>
                                 <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="250" axis="vertical" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="A0L-IL-kVl">
-                                    <rect key="frame" x="16" y="208" width="382" height="376"/>
+                                    <rect key="frame" x="16" y="208" width="382" height="424"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="40" translatesAutoresizingMaskIntoConstraints="NO" id="pzX-2Z-8ZP" customClass="AndesButton" customModule="AndesUI">
                                             <rect key="frame" x="0.0" y="0.0" width="382" height="40"/>
@@ -148,7 +149,7 @@
                                             </connections>
                                         </view>
                                         <view contentMode="scaleToFill" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="40" translatesAutoresizingMaskIntoConstraints="NO" id="9Bv-gW-s5F" customClass="AndesButton" customModule="AndesUI">
-                                            <rect key="frame" x="0.0" y="240" width="382" height="40"/>
+                                            <rect key="frame" x="0.0" y="288" width="382" height="40"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <accessibility key="accessibilityConfiguration" identifier="andesTag" label="Tag showcase"/>
                                             <userDefinedRuntimeAttributes>
@@ -171,14 +172,28 @@
                                                 <action selector="snackbarBtnTapped:" destination="-1" eventType="touchUpInside" id="E6y-h5-MfU"/>
                                             </connections>
                                         </view>
+                                        <view contentMode="scaleToFill" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="40" translatesAutoresizingMaskIntoConstraints="NO" id="RSJ-jO-HhG" userLabel="Card Btn" customClass="AndesButton" customModule="AndesUI">
+                                            <rect key="frame" x="0.0" y="384" width="382" height="40"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <accessibility key="accessibilityConfiguration" identifier="andesSnackbar" label="Snackbar showcases"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="string" keyPath="text" value="Andes Card"/>
+                                                <userDefinedRuntimeAttribute type="string" keyPath="ibSize" value="Large"/>
+                                            </userDefinedRuntimeAttributes>
+                                            <connections>
+                                                <action selector="cardBtnTapped:" destination="-1" eventType="touchUpInside" id="4jA-EG-0D8"/>
+                                            </connections>
+                                        </view>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="x2S-1u-jO7" firstAttribute="trailing" secondItem="9Hm-nl-pHd" secondAttribute="trailing" id="48j-EC-yGH"/>
+                                        <constraint firstItem="RSJ-jO-HhG" firstAttribute="leading" secondItem="eek-t9-Hwx" secondAttribute="leading" id="9VQ-F6-8qD"/>
                                         <constraint firstItem="eek-t9-Hwx" firstAttribute="trailing" secondItem="9Bv-gW-s5F" secondAttribute="trailing" id="HBs-Rs-U3Y"/>
                                         <constraint firstItem="iA2-9b-o7k" firstAttribute="leading" secondItem="pzX-2Z-8ZP" secondAttribute="leading" id="KUL-h4-mtz"/>
                                         <constraint firstItem="nQg-JB-1Sl" firstAttribute="trailing" secondItem="6KW-tw-Wm7" secondAttribute="trailing" id="T3t-x0-y4j"/>
                                         <constraint firstItem="6KW-tw-Wm7" firstAttribute="trailing" secondItem="iA2-9b-o7k" secondAttribute="trailing" id="TK3-J5-Z4t"/>
                                         <constraint firstItem="x2S-1u-jO7" firstAttribute="leading" secondItem="9Hm-nl-pHd" secondAttribute="leading" id="XLa-bv-cNz"/>
+                                        <constraint firstItem="RSJ-jO-HhG" firstAttribute="trailing" secondItem="eek-t9-Hwx" secondAttribute="trailing" id="ZHE-Pa-tY9"/>
                                         <constraint firstItem="eek-t9-Hwx" firstAttribute="leading" secondItem="9Bv-gW-s5F" secondAttribute="leading" id="eTY-JI-CLj"/>
                                         <constraint firstItem="6KW-tw-Wm7" firstAttribute="leading" secondItem="iA2-9b-o7k" secondAttribute="leading" id="iDI-vo-dFa"/>
                                         <constraint firstItem="nQg-JB-1Sl" firstAttribute="leading" secondItem="6KW-tw-Wm7" secondAttribute="leading" id="jOv-Qy-bS1"/>
