--- a/LibraryComponents/Classes/AndesCard/View/Default/AndesCardDefaultView.xib
+++ b/LibraryComponents/Classes/AndesCard/View/Default/AndesCardDefaultView.xib
@@ -9,8 +9,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AndesCardDefaultView" customModule="AndesUI">
             <connections>
+                <outlet property="bottomUserViewContainerConstraint" destination="222-1T-Dux" id="HCZ-an-WHF"/>
                 <outlet property="containerView" destination="iN0-l3-epB" id="1ru-xs-6dz"/>
+                <outlet property="leadingUserViewContainerConstraint" destination="TbK-ud-NJH" id="ALr-qi-UyQ"/>
                 <outlet property="leftPipe" destination="xp9-Oq-K25" id="u4W-ML-ysY"/>
+                <outlet property="topUserViewContainerConstraint" destination="iUK-jd-kMc" id="JIv-V8-weg"/>
+                <outlet property="trailingUserViewContainerConstraint" destination="1m9-IP-CY5" id="DEP-mq-Ezm"/>
+                <outlet property="userViewContainer" destination="lcn-zn-f6B" id="qRy-gl-EjM"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -18,6 +23,10 @@
             <rect key="frame" x="0.0" y="0.0" width="462" height="198"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lcn-zn-f6B" userLabel="userViewContainer">
+                    <rect key="frame" x="0.0" y="0.0" width="462" height="198"/>
+                    <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                </view>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xp9-Oq-K25" userLabel="leftPipe">
                     <rect key="frame" x="0.0" y="0.0" width="4" height="198"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -28,8 +37,12 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="lcn-zn-f6B" secondAttribute="trailing" id="1m9-IP-CY5"/>
+                <constraint firstAttribute="bottom" secondItem="lcn-zn-f6B" secondAttribute="bottom" id="222-1T-Dux"/>
                 <constraint firstAttribute="bottom" secondItem="xp9-Oq-K25" secondAttribute="bottom" id="99P-gT-puc"/>
+                <constraint firstItem="lcn-zn-f6B" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="TbK-ud-NJH"/>
                 <constraint firstItem="xp9-Oq-K25" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="cnz-1l-nRy"/>
+                <constraint firstItem="lcn-zn-f6B" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="iUK-jd-kMc"/>
                 <constraint firstItem="xp9-Oq-K25" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="mz2-pn-83j"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
