--- a/Example/AndesUI/Home/Views/HomeViewController.xib
+++ b/Example/AndesUI/Home/Views/HomeViewController.xib
@@ -175,7 +175,7 @@
                                         <view contentMode="scaleToFill" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="40" translatesAutoresizingMaskIntoConstraints="NO" id="RSJ-jO-HhG" userLabel="Card Btn" customClass="AndesButton" customModule="AndesUI">
                                             <rect key="frame" x="0.0" y="384" width="382" height="40"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <accessibility key="accessibilityConfiguration" identifier="andesSnackbar" label="Snackbar showcases"/>
+                                            <accessibility key="accessibilityConfiguration" identifier="andesCard" label="Card showcases"/>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="string" keyPath="text" value="Andes Card"/>
                                                 <userDefinedRuntimeAttribute type="string" keyPath="ibSize" value="Large"/>
